...
        }
        // FIXME - descriptionを表示したい
        closure("show description")
    }
    
    func showAlert(message:String) {
        let alertController:UIAlertController = UIAlertController(title: "確認", message: message, preferredStyle: .alert)
        let okAction:UIAlertAction = UIAlertAction(title: "OK", style: .default) { (alert) -> Void in
            // OKを選択したときに実行される処理
        }
        alertController.addAction(okAction)
        
        present(alertController, animated: true, completion: nil)
    }
...
